--- a/E_commerce/templates/authentication_register.html
+++ b/E_commerce/templates/authentication_register.html
@@ -1,6 +1,7 @@
 ﻿{% extends 'base.html' %}
 {% load static %}
 {% block content %}
+{% load socialaccount %}
   <!--end top header-->
 
 
@@ -37,7 +38,7 @@
                  <div class="social-login mb-4">
                   <div class="row g-4 ml-5">
                     <div class="col-xl-8 mx-auto ">
-                      <button type="button" class="btn bg-pinterest btn-ecomm w-100 text-white"><i class="bi bi-google me-2"></i>Google</button>
+                      <a href="{% provider_login_url 'google' %}" type="button" class="btn bg-pinterest btn-ecomm w-100 text-white"><i class="bi bi-google me-2"></i>Google</a>
                   </div>
                    </div>
                  </div>
