--- a/E_commerce/templates/account_dashboard.html
+++ b/E_commerce/templates/account_dashboard.html
@@ -40,8 +40,13 @@
                     <div class="list-group w-100 rounded-0">
                       <a href="{%url 'account_dashboard' %}" class="list-group-item active"><i class="bi bi-house-door me-2"></i>Dashboard</a>
                       <a href="{%url 'account_orders' %}" class="list-group-item"><i class="bi bi-basket3 me-2"></i>Orders</a>
-                      <a href="{%url 'account_profile' %}" class="list-group-item"><i class="bi bi-person me-2"></i>Profile</a>
-                      <a href="{%url 'account_edit'%}" class="list-group-item"><i class="bi bi-pencil me-2"></i>Edit Profile</a>
+                      {% if  user.profile.pk %}
+                      <a class="list-group-item" href="{%url 'account_profile'%}"><i class="bi bi-person me-2"></i>Profile</a>
+                      <a class="list-group-item" href="{%url 'account_edit' user.profile.pk%}"><i class="bi bi-pencil me-2"></i>Edit Profile</a>
+                    {% endif %}
+                    {%if user.is_authenticated and not user.profile.pk %}
+                      <a class="list-group-item" href="{%url 'create_profile'%}"><i class="bi bi-pencil me-2"></i>Create Profile</a>
+                    {% endif %}
                       <a href="{%url 'wishlist' %}" class="list-group-item"><i class="bi bi-suit-heart me-2"></i>Wishlist</a>
                       <a href="{%url 'logout_user' %}" class="list-group-item"><i class="bi bi-power me-2"></i>Logout</a>
                     </div>
@@ -59,9 +64,9 @@
                      <div class="profile-email flex-grow-1">
                        <p class="mb-0 fw-bold text-content">michel@example.com</p>
                      </div>
-                     <div class="edit-button align-self-start">
-                       <a href="{% url 'account_edit' %}" class="btn btn-outline-dark btn-ecomm"><i class="bi bi-pencil-fill me-2"></i>Edit Profile</a>
-                     </div>
+                     {% if  user.profile.pk %}
+                     <a class="list-group-item" href="{%url 'account_edit' user.profile.pk%}"><i class="bi bi-pencil me-2"></i>Edit Profile</a>
+                   {% endif %}
                    </div>
                  </div>
              </div>
