--- a/E_commerce/templates/account_edit_profile.html
+++ b/E_commerce/templates/account_edit_profile.html
@@ -42,8 +42,13 @@
                 <div class="list-group w-100 rounded-0">
                   <a href="{%url 'account_dashboard' %}" class="list-group-item"><i class="bi bi-house-door me-2"></i>Dashboard</a>
                   <a href="{% url 'account_orders' %}" class="list-group-item"><i class="bi bi-basket3 me-2"></i>Orders</a>
-                  <a href="{%url 'account_profile' %}" class="list-group-item"><i class="bi bi-person me-2"></i>Profile</a>
-                  <a href="{%url 'account_edit'%}" class="list-group-item active"><i class="bi bi-pencil me-2"></i>Edit Profile</a>
+                  {% if  user.profile.pk %}
+                  <a class="list-group-item" href="{%url 'account_profile'%}"><i class="bi bi-person me-2"></i>Profile</a>
+                  <a class="list-group-item" href="{%url 'account_edit' user.profile.pk%}"><i class="bi bi-pencil me-2"></i>Edit Profile</a>
+                {% endif %}
+                {%if user.is_authenticated and not user.profile.pk %}
+                  <a class="list-group-item" href="{%url 'create_profile'%}"><i class="bi bi-pencil me-2"></i>Create Profile</a>
+                {% endif %}
                   <a href="{%url 'wishlist' %}" class="list-group-item"><i class="bi bi-suit-heart me-2"></i>Wishlist</a>
                   <a href="{%url 'logout_user' %}" class="list-group-item "><i class="bi bi-power me-2"></i>Logout</a>
                 </div>
@@ -54,87 +59,54 @@
           <div class="col-12 col-xl-7">
             <div class="card rounded-0">
               <div class="card-body p-lg-5">
+                {% if user.profile.pk %}
                   <h5 class="mb-0 fw-bold">Edit Details</h5>
+                {% else %}
+                  <h5 class="mb-0 fw-bold">Create Details</h5>
+                {% endif %}
                   <hr>
-                   <form>
-                     <div class="row row-cols-1 g-3">
+                  <form action="" method="POST">
+                    {% csrf_token %}
+                      {% comment %} <div class="row row-cols-1 g-3">
                         <div class="col">
                           <div class="form-floating">
-                            <input type="text" class="form-control rounded-0" id="floatingInputName" placeholder="Name" value="jhon Deo">
-                            <label for="floatingInputName">Name</label>
+                            <input type="text" name="name" class="form-control rounded-0" placeholder="Name" >
+                            <label >Name</label>
                           </div>
                         </div>
                         <div class="col">
                           <div class="form-floating">
-                            <input type="text" class="form-control rounded-0" id="floatingInputNumber" placeholder="Name" value="+99-85XXXXXXXX">
-                            <label for="floatingInputNumber">Mobile Number</label>
+                            <input type="text" name="phone_number" class="form-control rounded-0" placeholder="+234 xxxxxxxx">
+                            <label>Mobile Number(+234 xxxxxxxxxxx)</label>
                           </div>
                         </div>
                         <div class="col">
                           <div class="form-floating">
-                            <input type="date" class="form-control rounded-0" id="floatingInputDOB" value="">
-                            <label for="floatingInputDOB">Date of Birth</label>
+                            <input type="text" name="date_of_birth" class="form-control rounded-0"  placeholder="date_of_birth" >
+                            <label for="">Date Of Birth(yyyy-mm-dd)</label>
                           </div>
                         </div>
                         <div class="col">
                           <div class="form-floating">
-                            <input type="text" class="form-control rounded-0" id="floatingInputLocation" placeholder="Location" value="United Kingdom">
-                            <label for="floatingInputLocation">Location</label>
+                            <input type="text" name="location" class="form-control rounded-0"  placeholder="Location" >
+                            <label>Location</label>
                           </div>
-                        </div>
+                        </div> {% endcomment %}
+                        {{profile_form.as_p}}
                         <div class="col">
-                          <button type="button" class="btn btn-dark py-3 btn-ecomm w-100">Save Details</button>
+                          <button type="submit" class="btn btn-dark py-3 btn-ecomm w-100">Save Details</button>
                         </div>
                         <div class="col">
                           <button type="button" class="btn btn-outline-dark py-3 btn-ecomm w-100" data-bs-toggle="modal" data-bs-target="#ChangePasswordModal">Change Password</button>
                         </div>
-                        
-
-                     </div>
-                   </form>
+                      </div>
+                  </form>
               </div>
             </div>
           </div>
        </div><!--end row-->
     </div>
   </section>
-   <!--start product details-->
-
-
-   <!-- Change Password Modal -->
-    <div class="modal" id="ChangePasswordModal" tabindex="-1">
-      <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-        <div class="modal-content rounded-0">
-          <div class="modal-body">
-            <h5 class="fw-bold mb-3">Change Password</h5>
-            <hr>
-              <form>
-                <div class="form-floating mb-3">
-                  <input type="text" class="form-control rounded-0" id="floatingInputOldPass" placeholder="Old Password">
-                  <label for="floatingInputOldPass">Old Password</label>
-                </div>
-                <div class="form-floating mb-3">
-                  <input type="text" class="form-control rounded-0" id="floatingInputNewPass" placeholder="New Password">
-                  <label for="floatingInputNewPass">New Password</label>
-                </div>
-                <div class="form-floating mb-3">
-                  <input type="text" class="form-control rounded-0" id="floatingInputConPass" placeholder="Confirm Password">
-                  <label for="floatingInputConPass">Confirm Password</label>
-                </div>
-                <div class="d-grid gap-3 w-100">
-                  <button type="button" class="btn btn-dark py-3 btn-ecomm">Change</button>
-                  <button type="button" class="btn btn-outline-dark py-3 btn-ecomm" data-bs-dismiss="modal" aria-label="Close">Cancel</button>
-                </div>
-              </form>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- end Change Password Modal -->
-
-
- </div>
-  <!--end page content-->
 
 
   <!--start footer-->
