--- a/E_commerce/templates/account_orders.html
+++ b/E_commerce/templates/account_orders.html
@@ -145,8 +145,13 @@
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="{%url 'account_dashboard' %}">Dashboard</a></li>
                 <li><a class="dropdown-item" href="{%url 'account_orders' %}">My Orders</a></li>
-                <li><a class="dropdown-item" href="{%url 'account_profile'%}">My Profile</a></li>
-                <li><a class="dropdown-item" href="{%url 'account_edit'%}">Edit Profile</a></li>
+                {% if  user.profile.pk %}
+                <a class="list-group-item" href="{%url 'account_profile'%}"><i class="bi bi-person me-2"></i>Profile</a>
+                <a class="list-group-item" href="{%url 'account_edit' user.profile.pk%}"><i class="bi bi-pencil me-2"></i>Edit Profile</a>
+              {% endif %}
+              {%if user.is_authenticated and not user.profile.pk %}
+                <a class="list-group-item" href="{%url 'create_profile'%}"><i class="bi bi-pencil me-2"></i>Create Profile</a>
+              {% endif %}
                 <li><a class="dropdown-item" href="{%url 'address' %}">Addresses</a></li>
                 <li>
                   <hr class="dropdown-divider">
@@ -230,8 +235,10 @@
                   <div class="offcanvas-body account-menu">
                     <div class="list-group w-100 rounded-0">
                       <a href="{% url 'account_dashboard' %}" class="list-group-item"><i class="bi bi-house-door me-2"></i>Dashboard</a>
-                      <a href="{% url 'account_orders' %}" class="list-group-item"><i class=active"><i class="bi bi-basket3 me-2"></i>Orders</a>
-                      <a href="{% url 'account_edit' %}" class="list-group-item"><i class="bi bi-pencil me-2"></i>Edit Profile</a>
+                      <a href="{% url 'account_orders' %}" class="list-group-item"><i class="active"><i class="bi bi-basket3 me-2"></i>Orders</a>
+                      {% if  user.profile.pk %}
+                      <a class="list-group-item" href="{%url 'account_edit' user.profile.pk%}"><i class="bi bi-pencil me-2"></i>Edit Profile</a>
+                      {% endif %}
                       <a href="{% url 'wishlist' %}" class="list-group-item"><i class="bi bi-suit-heart me-2"></i>Wishlist</a>
                       <a href="{% url 'authentication_login' %}" class="list-group-item"><i class="bi bi-power me-2"></i>Logout</a>
                     </div>
